# paperkit

./: .bazelrc  .containerignore  .gitignore  ARCHITECTURE.md  BUILD.bazel  Containerfile  Containerfile.base  Containerfile.verify  Containerfile.verify.base  MODULE.bazel  README.md  mem.json  paper.toml  rubric.tsv  warrants.bib
.githooks/: pre-commit
assets/: claim.bib  commands.sh  delta-cmds.sh  enable-hooks.sh  grades.md  layout.txt  resolver.md  resolver.toml
boundaries/: BOUNDARIES.md  BUILD.bazel  paper.toml  rubric.tsv  warrants.bib
canary/: BUILD.bazel  canary_check.py  canary_probe.py
checks/: concepts.py  readme.py
config/: BUILD.bazel  CONFIG.md  paper.toml  rubric.tsv  warrants.bib
config/assets/: knobs.md
config/checks/: gen_knobs.py  registry.py
cotype/: README.md  check.py  ledger.md
guide/: BUILD.bazel  GUIDE.md  guide.bib  paper.toml  rubric.tsv
guide/assets/starter/: note.md  paper.toml  rubric.tsv  warrants.bib
image/: IMAGE.md  entrypoint.sh  paper.toml  rubric.tsv  warrants.bib
image/checks/: repro.sh  serve.sh  stable.sh
inbox/: README.md
inbox/archive/: 2026-07-20-cassian-downstream.md  2026-07-21-cassian-reply.md  2026-07-21-cassian-reply2.md  2026-07-21-paperkit-reply.md  2026-07-21-paperkit-reply2.md
paper/: BUILD.bazel  adequacy.bib  adequacy_pitch.bib  composition.bib  conclusion.bib  engine.bib  gate.bib  implications.bib  liveness.bib  mem.json  model.bib  paper.md  paper.toml  projection.bib  references.bib  resolver.bib  rhetoric.bib  rubric.tsv  warrants.bib
paper/checks/: claims.py  drift-caught.sh  project-deterministic.sh  projection-stable.sh
paper/checks/fixture/: BUILD.bazel  paper.md  paper.toml  rubric.tsv  warrants.bib
paperkit/: BUILD.bazel  bib.py  cache.py  coherence.py  components.bzl  config.py  dag.bzl  discriminate.py  driver.py  footdeps.py  gate.py  grade.py  grader.py  layout.py  membudget  mutate.py  project.py  resolver.py  rhetoric.py
paperkit/tests/: _fixture.py  _fixture_delta.py  _fixture_gate.py  _fixture_model.py  _fixture_project.py  boundaries_agree.py  boundaries_check.py  boundaries_coherence.py  boundaries_components.py  boundaries_config.py  boundaries_corroboration.py  boundaries_degrade.py  boundaries_discriminate.py  boundaries_dispatch.py  boundaries_driver.py  boundaries_emit.py  boundaries_env.py  boundaries_footprint.py  boundaries_gate_json.py  boundaries_grounding.py  boundaries_hook_index.py  boundaries_jobs.py  boundaries_ladder.py  boundaries_memoize.py  boundaries_otlp.py  boundaries_path.py  boundaries_prove.py  boundaries_prove_envelope.py  boundaries_references.py  boundaries_sandbox.py  boundaries_surface.py  boundaries_target.py  boundaries_toplevel.py  boundaries_without_k.py
render/: RENDER.md  paper.toml  rubric.tsv  warrants.bib
render/checks/: a11y.py  agree.sh  agree_docx.sh  agree_md.sh  bib.py  emit.sh  fidelity.py  fig_legible.py  fig_vector.py  fonts.py  numfmt.py  ocr.py  pdf.py  plain.py  structure.py
report/: BUILD.bazel  REPORT.md  determinism.py  figure.py  figure_checks.py  gen.py  mitigation.py  paper.toml  rubric.tsv  warrants.bib
report/assets/: delta.md  delta.txt  gate.md  gate.txt  without-k.md  without-k.txt
scripts/: check-grades.sh
setup/: BUILD.bazel  SETUP.md  experiment.py  loadtest.json  paper.toml  probe.py  reference.json  rubric.tsv  warrants.bib
tools/: BUILD.bazel  assert_pass.sh  bibtex.bzl  calc.bzl  closure.py  cohere.py  def_sites.py  eval.py  grade.bzl  hook_index.py  imports.py  lint_bzl.py  mem_learn.py  otlp_push.py  probe.py  pyc.py  pyinfo.py  read_grade.py  run.sh  sched-batch.c  sched-batch.rs  sens.py  sites.py  verb.bzl  verdict.py  witness.bzl
tools/calc_demo/: BUILD.bazel
tools/pi_demo/: BUILD.bazel
tools/verb_demo/: BUILD.bazel
tools/witness_demo/: BUILD.bazel
