"""paperkit on Bazel — Phase 1 (harness).

The bib IS the makefile; Bazel is the build-graph engine.  Phase 1 wraps each paperkit project's
gate as a Bazel test so Bazel owns scheduling, caching (re-gate only when a project's declared
inputs change), progress, and resource limits — `bazel test //...` replaces the .githooks loop.
The engine's home-grown footprint-cache / membudget / Δ-sandbox stay inside for now; Phase 2
pushes targets down to per-check (bib→BUILD) and deletes them as Bazel subsumes each.
"""
module(name = "paperkit", version = "0.1")

# Ζ·starlark — the bib IS the build graph: a module extension reads each project's warrants.bib
# during the fetch phase and projects each claim into a target (no checked-in BUILD projection).
bib = use_extension("//tools:bibtex.bzl", "bib")
bib.project(name = "paperkit_boundaries", bib = "//boundaries:warrants.bib", project = "boundaries")
bib.project(name = "paperkit_config", bib = "//config:warrants.bib", project = "config")
# Each target's data is footprint-derived (footprints.json, Ζ·foot) — no hand-declared extra_data.
bib.project(name = "paperkit_paper", bib = "//paper:warrants.bib", project = "paper", adequacy = True)
bib.project(name = "paperkit_root", bib = "//:warrants.bib", project = ".", adequacy = True)
bib.project(name = "paperkit_setup", bib = "//setup:warrants.bib", project = "setup")
use_repo(bib, "paperkit_boundaries", "paperkit_config", "paperkit_paper", "paperkit_root", "paperkit_setup")
