"""paperkit on Bazel — the bib IS the build graph (Ζ).

A module extension (tools/bibtex.bzl) reads each project's warrants.bib at fetch and projects
every claim into a recursive check target; `bazel test //:hook` gates AND grades every document.
The engine's home-grown build machinery — the checked-in BUILD projector, the membudget
semaphore — is RETIRED: Bazel owns scheduling, caching (re-gate only on changed inputs), progress,
resource limits (--local_extra_resources), and the sandbox.  The bib is the sole source.
"""
module(name = "paperkit", version = "0.1")

# Ζ·starlark — the bib IS the build graph: a module extension reads each project's warrants.bib
# during the fetch phase and projects each claim into a target (no checked-in BUILD projection).
bib = use_extension("//tools:bibtex.bzl", "bib")
bib.project(name = "paperkit_boundaries", bib = "//boundaries:warrants.bib", project = "boundaries")
bib.project(name = "paperkit_config", bib = "//config:warrants.bib", project = "config")
# Each target's data is footprint-derived (footprints.json, Ζ·foot) — no hand-declared extra_data.
bib.project(name = "paperkit_paper", bib = "//paper:warrants.bib", project = "paper", adequacy = True)
bib.project(name = "paperkit_root", bib = "//:warrants.bib", project = ".", adequacy = True)
bib.project(name = "paperkit_setup", bib = "//setup:warrants.bib", project = "setup")
use_repo(bib, "paperkit_boundaries", "paperkit_config", "paperkit_paper", "paperkit_root", "paperkit_setup")
