"""paperkit on Bazel — the bib IS the build graph (Ζ).

A module extension (tools/bibtex.bzl) reads each project's warrants.bib at fetch and projects
every claim into a recursive check target; `bazel test //:hook` gates AND grades every document.
The engine's home-grown build machinery — the checked-in BUILD projector, the membudget
semaphore — is RETIRED: Bazel owns scheduling, caching (re-gate only on changed inputs), progress,
resource limits (--local_extra_resources), and the sandbox.  The bib is the sole source.
"""
module(name = "paperkit", version = "0.1")

# Ζ·toolchain — a HERMETIC python (rules_python), so "which python" is Bazel's, not the host's.
# The foundation for Bazel-native check execution (Ζ·pi) and the end of host-python fragility
# (sys.executable empty in a build-action python that re-spawns python).
bazel_dep(name = "rules_python", version = "1.0.0")
python = use_extension("@rules_python//python/extensions:python.bzl", "python")
python.toolchain(python_version = "3.13", is_default = True)

# Ζ·starlark — the bib IS the build graph: a module extension reads each project's warrants.bib
# during the fetch phase and projects each claim into a target (no checked-in BUILD projection).
bib = use_extension("//tools:bibtex.bzl", "bib")
bib.project(name = "paperkit_boundaries", bib = "//boundaries:warrants.bib", project = "boundaries")
bib.project(name = "paperkit_config", bib = "//config:warrants.bib", project = "config")
# Each target's data is footprint-derived (footprints.json, Ζ·foot) — no hand-declared extra_data.
bib.project(name = "paperkit_paper", bib = "//paper:warrants.bib", project = "paper", adequacy = True, compose = True)  # Ζ·compose
bib.project(name = "paperkit_root", bib = "//:warrants.bib", project = ".", adequacy = True)
bib.project(name = "paperkit_setup", bib = "//setup:warrants.bib", project = "setup", local = True)  # Ζ·resist: host-coupled
use_repo(bib, "paperkit_boundaries", "paperkit_config", "paperkit_paper", "paperkit_root", "paperkit_setup")
