# Hand-maintained file manifest (Ζ·sunset) — a data dep of the Ζ·starlark-generated
# @paperkit_boundaries check graph; the bib is the source, this just lists the files.
filegroup(name = "files", srcs = [
        "BOUNDARIES.md",
        "paper.toml",
        "rubric.tsv",
        "warrants.bib",
    ], visibility = ["//visibility:public"])
