# Hand-maintained file manifest (Ζ·sunset) — a data dep of the Ζ·starlark-generated
# @paperkit_paper check graph; the bib is the source, this just lists the files.
filegroup(name = "files", srcs = [
        "checks/claims.py",
        "checks/drift-caught.sh",
        "checks/project-deterministic.sh",
        "checks/projection-stable.sh",
        "paper.md",
        "paper.toml",
        "references.bib",
        "rubric.tsv",
        "warrants.bib",
        "//paper/checks/fixture:files",
    ], visibility = ["//visibility:public"])
