# Hand-maintained file manifest (Ζ·sunset) — a data dep of the Ζ·starlark-generated
# @paperkit_paper check graph; the bib is the source, this just lists the files.
filegroup(name = "files", srcs = [
        "checks/claims.py",
        "paper.md",
        "paper.toml",
        "references.bib",
        "rubric.tsv",
        # the warrant claim-DAG, authored as a concept library (composed by paper.toml)
        "model.bib",
        "engine.bib",
        "resolver.bib",
        "projection.bib",
        "gate.bib",
        "adequacy.bib",
        "liveness.bib",
        "rhetoric.bib",
        "composition.bib",
        "implications.bib",
        "conclusion.bib",
        "//paper/checks/fixture:files",
    ], visibility = ["//visibility:public"])
