# The engine — EXPLICIT srcs (no globs).  Every project's gate deps on //paperkit:engine.
# The list is shared by the filegroup AND exports_files, so each module is also referenceable as
# //paperkit:<module>.py — the per-module unit pk_pyc compiles to a .pyc build artifact (Ζ·pyc).
ENGINE_SRCS = [
    "bib.py",
    "cache.py",
    "coherence.py",
    "config.py",
    "discriminate.py",
    "driver.py",
    "footdeps.py",
    "gate.py",
    "grade.py",
    "grader.py",
    "layout.py",
    "mutate.py",
    "project.py",
    "resolver.py",
    "rhetoric.py",
    "tests/_fixture.py",
    "tests/boundaries_agree.py",
    "tests/boundaries_check.py",
    "tests/boundaries_coherence.py",
    "tests/boundaries_config.py",
    "tests/boundaries_corroboration.py",
    "tests/boundaries_degrade.py",
    "tests/boundaries_discriminate.py",
    "tests/boundaries_driver.py",
    "tests/boundaries_emit.py",
    "tests/boundaries_env.py",
    "tests/boundaries_footprint.py",
    "tests/boundaries_gate_json.py",
    "tests/boundaries_jobs.py",
    "tests/boundaries_memoize.py",
    "tests/boundaries_path.py",
    "tests/boundaries_references.py",
    "tests/boundaries_sandbox.py",
    "tests/boundaries_target.py",
    "tests/boundaries_without_k.py",
]

filegroup(
    name = "engine",
    srcs = ENGINE_SRCS,
    visibility = ["//visibility:public"],
)

exports_files(ENGINE_SRCS)
