load("//tools:calc.bzl", "pk_pyc")
load("//paperkit:dag.bzl", "IMPORTS")

# The engine — EXPLICIT srcs (no globs).  Every project's gate deps on //paperkit:engine.
# The list is shared by the filegroup AND exports_files, so each module is also referenceable as
# //paperkit:<module>.py — the per-module unit pk_pyc compiles to a .pyc build artifact (Ζ·pyc).
ENGINE_SRCS = [
    "bib.py",
    "cache.py",
    "coherence.py",
    "config.py",
    "discriminate.py",
    "driver.py",
    "footdeps.py",
    "gate.py",
    "grade.py",
    "grader.py",
    "layout.py",
    "mutate.py",
    "project.py",
    "resolver.py",
    "rhetoric.py",
    "tests/_fixture.py",
    "tests/boundaries_agree.py",
    "tests/boundaries_check.py",
    "tests/boundaries_coherence.py",
    "tests/boundaries_config.py",
    "tests/boundaries_corroboration.py",
    "tests/boundaries_degrade.py",
    "tests/boundaries_discriminate.py",
    "tests/boundaries_dispatch.py",
    "tests/boundaries_driver.py",
    "tests/boundaries_emit.py",
    "tests/boundaries_env.py",
    "tests/boundaries_footprint.py",
    "tests/boundaries_gate_json.py",
    "tests/boundaries_grounding.py",
    "tests/boundaries_jobs.py",
    "tests/boundaries_ladder.py",
    "tests/boundaries_memoize.py",
    "tests/boundaries_path.py",
    "tests/boundaries_references.py",
    "tests/boundaries_sandbox.py",
    "tests/boundaries_target.py",
    "tests/boundaries_without_k.py",
]

filegroup(
    name = "engine",
    srcs = ENGINE_SRCS,
    visibility = ["//visibility:public"],
)

exports_files(ENGINE_SRCS)

# Ζ·pyc·engine — the engine's COMPILED form: one pk_pyc per module (one .cc → one .o), so editing a
# module recompiles only its .pyc.  The output preserves the module's path (tests/_fixture.py →
# tests/_fixture.pyc), so a consumer maps it to __pycache__/<stem>.<tag>.pyc by parallel structure.
# //paperkit:pyc mirrors //paperkit:engine — the bytecode the engine runs off (pk_eval now; the gate
# and checks at Ζ·pyc·run).  Compile ONCE, shared across the whole def-sweep fanout.
#
# Ξ·dag·build — each pk_pyc's deps ARE its imports (paperkit/dag.bzl, AST-derived): the build DAG is a
# projection of the engine import DAG, so a consumer stages a module's transitive .pyc CLOSURE (its
# dependency cone), not the flat engine.  IMPORTS keys stems by bare name; a tests/ module's target is
# tests/<stem>, so map every imported stem back to its owning pk_pyc target name.
_STEM_TO_TARGET = {m.rsplit("/", 1)[-1][:-len(".py")]: m[:-len(".py")] for m in ENGINE_SRCS}

[
    pk_pyc(
        name = m[:-len(".py")],
        src = m,
        deps = [":" + _STEM_TO_TARGET[s] for s in IMPORTS.get(m, [])],
        # Ξ·dag·eval — public: a cell's `closure` references these pk_pyc targets directly (not the
        # flat //paperkit:pyc), and the emerge grid lives in a separate repo.
        visibility = ["//visibility:public"],
    )
    for m in ENGINE_SRCS
]

filegroup(
    name = "pyc",
    srcs = [":" + m[:-len(".py")] for m in ENGINE_SRCS],
    visibility = ["//visibility:public"],
)
