load("//tools:calc.bzl", "pk_pyc")
load("//paperkit:dag.bzl", "IMPORTS")
load("//paperkit:components.bzl", "COMPONENTS")

# The engine — EXPLICIT srcs (no globs), DERIVED from the component partition (Μ·kernel·bounds,
# paperkit/components.bzl) so the union is total by construction; boundaries_components.py guards
# disjointness, coverage of the real tree, and the allowed import DAG.  Every project's gate deps
# on //paperkit:engine.  The list is shared by the filegroup AND exports_files, so each module is
# also referenceable as //paperkit:<module>.py — the per-module unit pk_pyc compiles to a .pyc
# build artifact (Ζ·pyc).
ENGINE_SRCS = sorted([f for fs in COMPONENTS.values() for f in fs])

filegroup(
    name = "engine",
    srcs = ENGINE_SRCS,
    visibility = ["//visibility:public"],
)

# Μ·kernel·bounds — one filegroup per component: the ownership unit Μ·kernel·certs certifies and
# the staging unit Μ·kernel·cells scopes Δ inputs to (component cones instead of the flat engine).
[
    filegroup(
        name = "comp-" + c,
        srcs = fs,
        visibility = ["//visibility:public"],
    )
    for c, fs in COMPONENTS.items()
]

exports_files(ENGINE_SRCS)

# Μ·kernel·wire — the partition and the import DAG are FILES as well as loads, so the
# bnd-components guard (staged via //:files) can verify the boundary from the owners.
exports_files(["components.bzl", "dag.bzl"])

# Ζ·pyc·engine — the engine's COMPILED form: one pk_pyc per module (one .cc → one .o), so editing a
# module recompiles only its .pyc.  The output preserves the module's path (tests/_fixture.py →
# tests/_fixture.pyc), so a consumer maps it to __pycache__/<stem>.<tag>.pyc by parallel structure.
# //paperkit:pyc mirrors //paperkit:engine — the bytecode the engine runs off (pk_eval now; the gate
# and checks at Ζ·pyc·run).  Compile ONCE, shared across the whole def-sweep fanout.
#
# Ξ·dag·build — each pk_pyc's deps ARE its imports (paperkit/dag.bzl, AST-derived): the build DAG is a
# projection of the engine import DAG, so a consumer stages a module's transitive .pyc CLOSURE (its
# dependency cone), not the flat engine.  IMPORTS keys stems by bare name; a tests/ module's target is
# tests/<stem>, so map every imported stem back to its owning pk_pyc target name.
_STEM_TO_TARGET = {m.rsplit("/", 1)[-1][:-len(".py")]: m[:-len(".py")] for m in ENGINE_SRCS}

[
    pk_pyc(
        name = m[:-len(".py")],
        src = m,
        deps = [":" + _STEM_TO_TARGET[s] for s in IMPORTS.get(m, [])],
        # Ξ·dag·eval — public: a cell's `closure` references these pk_pyc targets directly (not the
        # flat //paperkit:pyc), and the emerge grid lives in a separate repo.
        visibility = ["//visibility:public"],
    )
    for m in ENGINE_SRCS
]

filegroup(
    name = "pyc",
    srcs = [":" + m[:-len(".py")] for m in ENGINE_SRCS],
    visibility = ["//visibility:public"],
)
