# Hand-maintained file manifest (Ζ·sunset) — a data dep of the Ζ·starlark-generated
# @paperkit_report check graph; the bib is the source, this just lists the files.
filegroup(name = "files", srcs = [
        "REPORT.md",
        "assets/dag.svg",
        "assets/delta.md",
        "assets/gate.md",
        "assets/without-k.md",
        "figure.py",
        "figure_checks.py",
        "gen.py",
        "paper.toml",
        "rubric.tsv",
        "warrants.bib",
    ], visibility = ["//visibility:public"])

# Ζ·ladder·wire — the ladder's downstream readers, referenceable as individual file targets so the
# root manifest can stage them for boundaries' bnd-ladder check (mirrors tools/BUILD.bazel).
exports_files(["gen.py", "figure.py"])
