# Hand-maintained file manifest (Ζ·sunset) — a data dep of the Ζ·starlark-generated
# @paperkit_setup check graph; the bib is the source, this just lists the files.
filegroup(name = "files", srcs = [
        "SETUP.md",
        "experiment.py",
        "loadtest.json",
        "paper.toml",
        "probe.py",
        "reference.json",
        "rubric.tsv",
        "warrants.bib",
    ], visibility = ["//visibility:public"])
